@@ -63,6 +63,15 @@ On MacOSX 10.2 create an entry for <i>runit</i> in
  # cp -p /package/admin/runit/etc/macosx/StartupItems/* runit/
 </pre>
 and reboot your system.
+<p>
+On MacOSX 10.4 create an entry for <i>runit</i> in
+<tt>/Library/LaunchDaemons/</tt>, and tell <i>launchd</i> to start the
+new service:
+<pre>
+ # cp /package/admin/runit/etc/macosx/org.smarden.runit.plist \
+     /Library/LaunchDaemons/
+ # launchctl load /Library/LaunchDaemons/org.smarden.runit.plist
+</pre>
 <hr>
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
